Index page introduced, DnD moved to subfolder.

--- a/css/icons.css
+++ b/css/icons.css
@@ -374,6 +374,7 @@
 .icon-drowning { background-image: url(../img/drowning.png);}
 .icon-duality { background-image: url(../img/duality.png);}
 .icon-duel { background-image: url(../img/duel.png);}
+.icon-dungeon-gate { background-image: url(../img/dungeon-gate.png);}
 .icon-eagle-emblem { background-image: url(../img/eagle-emblem.png);}
 .icon-earth-crack { background-image: url(../img/earth-crack.png);}
 .icon-earth-spit { background-image: url(../img/earth-spit.png);}
