DnD renamed to contain edition number. PF2 added to the index.

--- a/css/quickref.css
+++ b/css/quickref.css
@@ -113,7 +113,9 @@
     font-size: inherit;
     height: 100%;
 }
-
+#section-index .item {
+    width:100%;
+}
 
 /* ------------------------------------------------------------------------- */
 /* Colors */
