--- a/css/quickref.css
+++ b/css/quickref.css
@@ -117,6 +117,9 @@
     width:100%;
 }
 
+#section-support .item {
+    width:100%;
+}
 /* ------------------------------------------------------------------------- */
 /* Colors */
 /* ------------------------------------------------------------------------- */
@@ -126,6 +129,14 @@
 }
 #section-index .text {
     color: maroon;
+}
+
+#section-support, #section-support .item-icon {
+    background-color: DarkOliveGreen;
+    border-color: DarkOliveGreen;
+}
+#section-support .text {
+    color: DarkOliveGreen;
 }
 
 #section-movement, #section-movement .item-icon {
